Fix overflow for reference helper

--- a/style/main.css
+++ b/style/main.css
@@ -23,8 +23,10 @@
 }
 
 .TextEditor--references {
-    max-width: 360px;
-    max-height: 100vh;
+    max-width: 400px;
+    max-height: 90vh;
+
+    overflow: hidden;
 
     box-shadow: 0px 2px 10px -2px #111;
 }
